--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,5 +11,10 @@ a {
     color: #000000;
 }
 
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-inline: 10px;
+}
 
 @import './sections/main';
