--- a/src/scss/sections/_editor.scss
+++ b/src/scss/sections/_editor.scss
@@ -3,7 +3,6 @@
     padding-bottom: rem(70);
 
     &__title{
-        font-family: $main-font;
         font-weight: bold;
         font-size: rem(54);
         text-transform: uppercase;
@@ -13,7 +12,7 @@
     }
 
     &__text{
-        font-family: $second-font;
+        font-family: $latoFont;
         font-size: rem(21);
         line-height: rem(32);
         max-width: rem(861);
@@ -29,7 +28,6 @@
 }
 
 .btn-wrapper{
-    font-family: $main-font;
     @include flex;
     border: 1px solid rgba(27, 31, 36, 0.15);
     border-radius: 6px;
