--- a/src/scss/sections/_prices.scss
+++ b/src/scss/sections/_prices.scss
@@ -21,62 +21,184 @@
         display: grid;
         grid-template-columns: 1fr 1fr 27% 1fr;
         column-gap: rem(15);
+        align-items: center;
     }
 }
 
 .tariff-plan{
     background-color: rgba(255, 255, 255, 0.11);
     color: #FFFFFF;
-    @include flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding-bottom: rem(37);
 
-    h3{
-        background-color: rgba(255, 255, 255, 0.06);
-        text-align: center;
-        width: 100%;
-        padding-block: rem(36);
-        font-size: rem(24);
-        text-transform: uppercase;
-    }
+    
+        h3{
+            background-color: rgba(255, 255, 255, 0.06);
+            text-align: center;
+            width: 100%;
+            padding-block: rem(36);
+            font-size: rem(24);
+            text-transform: uppercase;
+        }
+    
+        &__wrap{
+            @include flex(space-between);
+            flex-direction: column;
+            height: rem(360);
+            position: relative;
+            padding-top: rem(30);
+            padding-bottom: rem(37);
 
-    &__price{
-        margin-top: rem(30);
-        font-size: rem(60);
-        line-height: rem(90);
-        text-transform: uppercase;
-        text-align: center;
-        margin-bottom: rem(20);
-        
-        span{
-            font-weight: 700;
+            div{
+                h4{
+                    font-size: rem(60);
+                    line-height: rem(90);
+                    text-transform: uppercase;
+                    text-align: center;
+                    margin-bottom: rem(20);
+                    
+                    span{
+                        font-weight: 700;
+                    }
+                }
+
+
+                p{
+                font-size: rem(14);
+                line-height: rem(16);
+                text-transform: uppercase;
+                text-align: center;
+                margin-bottom: rem(38);
+
+                }   
+
+                hr{
+                    width: 60px;
+                    height: 5px;
+                    background-color: #8D81AC;
+                    border: none;
+                    margin: 0 auto;
+                }
+            }
+
+            &__text{
+                font-size: rem(16);
+                line-height: rem(18);
+                text-align: center;
+            }
+        }
+
+
+
+    &--main{
+        background-color: rgba(70, 48, 72, 0.84);
+
+        h3{
+            background-color: rgba(0, 0, 0, 0.11);
+            padding-block: rem(43);
+        }
+
+        &__wrap{
+            height: rem(449);
+            padding-top: rem(14);
+            padding-bottom: rem(47);
+
+            div{
+                h4{
+                    font-size: rem(82);
+                    margin-bottom: rem(16);
+                }
+
+                p{
+                    margin-bottom: rem(46);
+                }   
+            }
         }
     }
 
-    p{
-        font-size: rem(14);
-        line-height: rem(16);
-        text-transform: uppercase;
-        text-align: center;
-    }
+}
 
-    hr{
-        margin-top: rem(38);
-        width: 60px;
-        height: 5px;
-        background-color: #8D81AC;
-        border: none;
-        margin-bottom: rem(30);
-    }
+ .btn-purchase{
+    background-color: rgba(255, 255, 255, 0.15);
+    font-size: rem(15);
+    text-transform: uppercase;
+    color: #FFFFFF;
+    padding: rem(15.5) rem(38) rem(14.5) rem(37);
+    border-radius: 19px;
 
-    &__text{
+    &--main{
         font-size: rem(16);
         line-height: rem(18);
+        padding: rem(18.5) rem(48);
+        border-radius: 24px;
+        margin-top: rem(43);
+    }
+}
+
+@media (max-width: 992px){
+    .prices-section{
+
+        &__title {
+            padding-top: rem(98);
+            font-size: rem(42);
+            line-height: rem(44);
+            margin-bottom: rem(39);
+        }
+
+        &__wrapper{
+            max-width: rem(610);
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            column-gap: rem(25);
+            row-gap: rem(30);
+            justify-self: center;
+        }
     }
 
-    a{
+    .tariff-plan{
+        max-width: rem(257);    
+
+
+        &--main{
+            max-width: rem(299);
+
+            h3{
+                background-color: rgba(0, 0, 0, 0.11);
+                padding-block: rem(43);
+            }
+
+            &__wrap{
+                height: rem(449);
+                padding-top: rem(14);
+                padding-bottom: rem(47);
+
+                div{
+                    h4{
+                        font-size: rem(82);
+                        margin-bottom: rem(16);
+                    }
+
+                    p{
+                        margin-bottom: rem(46);
+                    }   
+                }
+            }
+        }
+
+    }
+
+    .btn-purchase{
         background-color: rgba(255, 255, 255, 0.15);
-        
+        font-size: rem(15);
+        text-transform: uppercase;
+        color: #FFFFFF;
+        padding: rem(15.5) rem(38) rem(14.5) rem(37);
+        border-radius: 19px;
+
+        &--main{
+            font-size: rem(16);
+            line-height: rem(18);
+            padding: rem(18.5) rem(48);
+            border-radius: 24px;
+            margin-top: rem(43);
+        }
     }
 }
