--- a/src/scss/sections/_prices.scss
+++ b/src/scss/sections/_prices.scss
@@ -4,6 +4,7 @@
     background-position: center;
     background-size: cover;    
     padding-inline: 10px;
+    padding-bottom: rem(73);
 
     &__title {
         padding-top: rem(129);
@@ -104,6 +105,7 @@
             div{
                 h4{
                     font-size: rem(82);
+                    line-height: rem(90);
                     margin-bottom: rem(16);
                 }
 
@@ -135,6 +137,7 @@
 
 @media (max-width: 992px){
     .prices-section{
+        padding-bottom: rem(94);
 
         &__title {
             padding-top: rem(98);
@@ -144,61 +147,68 @@
         }
 
         &__wrapper{
-            max-width: rem(610);
+            max-width: rem(623);
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: repeat(2, minmax(100px, 299px));
             column-gap: rem(25);
             row-gap: rem(30);
-            justify-self: center;
         }
     }
 
     .tariff-plan{
-        max-width: rem(257);    
-
+        width: 86%;
+        
+        &--first{
+            margin: 0 0 0 auto;
+        }
 
         &--main{
+            width: 100%;
+        }
+    }
+}
+
+@media (min-width: 320px) and (max-width: 480px){
+    .prices-section{  
+        padding-bottom: rem(12);
+
+        &__title {
+            padding-top: rem(23);
+            font-size: rem(28);
+            line-height: rem(42);
+            margin-bottom: rem(32);
+        }
+
+        &__wrapper{
             max-width: rem(299);
+            grid-template-columns: 1fr;
+            row-gap: rem(18);
+            justify-items: center;
+        }
+    }
 
-            h3{
-                background-color: rgba(0, 0, 0, 0.11);
-                padding-block: rem(43);
-            }
-
-            &__wrap{
-                height: rem(449);
-                padding-top: rem(14);
-                padding-bottom: rem(47);
-
-                div{
-                    h4{
-                        font-size: rem(82);
-                        margin-bottom: rem(16);
-                    }
-
-                    p{
-                        margin-bottom: rem(46);
-                    }   
+    .tariff-plan{   
+        &__wrap{
+            div{
+                h4{
+                    line-height: rem(62);
                 }
             }
         }
 
-    }
-
-    .btn-purchase{
-        background-color: rgba(255, 255, 255, 0.15);
-        font-size: rem(15);
-        text-transform: uppercase;
-        color: #FFFFFF;
-        padding: rem(15.5) rem(38) rem(14.5) rem(37);
-        border-radius: 19px;
+        &--first{
+            margin: 0 auto;
+        }
 
         &--main{
-            font-size: rem(16);
-            line-height: rem(18);
-            padding: rem(18.5) rem(48);
-            border-radius: 24px;
-            margin-top: rem(43);
+            &__wrap{
+                div{
+                    h4{
+                        line-height: rem(84);
+                    }
+                }
+            }
         }
+
     }
 }
