--- a/src/scss/sections/_prices.scss
+++ b/src/scss/sections/_prices.scss
@@ -1,5 +1,5 @@
 .prices-section{
-    background-image: url(../../../dist/img/prices-background.png);
+    background-image: url(../img/prices-background.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;    
