--- a/src/scss/sections/_what-you-get.scss
+++ b/src/scss/sections/_what-you-get.scss
@@ -108,7 +108,7 @@
         }
 
         &__img{
-            content: url(../../../dist/img/what-you-get-code-mob.png);
+            content: url(../img/what-you-get-code-mob.png);
             margin: 0 0 rem(6) rem(3);
         }
 
