--- a/src/scss/sections/_people-talking.scss
+++ b/src/scss/sections/_people-talking.scss
@@ -20,7 +20,7 @@
 
     &:after {
       content: "";
-      width: 780px;
+      width: 88%;
       height: 2px;
       background: #645766;
       position: absolute;
@@ -53,6 +53,10 @@
   text-align: center;
   color: #FFFFFF;
 
+  &__img{
+    max-width: 100%;
+  }
+
 }
 
 @media (max-width: 992px) {
@@ -66,7 +70,7 @@
 
     &__text{
       &:after {
-        width: 555px;
+        width: 79%;
       }
     }
   }
@@ -90,12 +94,12 @@
 
     &__text{
       &:after {
-        width: 245px;
+        width: 98%;
       }
     }
   }
   .wrapper {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(1, minmax(50px, 1fr));
     grid-template-rows: unset;
     column-gap: unset;
     row-gap: 45px;
