--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -4,7 +4,6 @@
   background-size: cover;
   height: 800px;
   text-align: center;
-  min-width: 320px;
 
   &__title {
     margin-top: 112px;
@@ -126,6 +125,7 @@
 .button:hover {
   background-color: $whiteColor;
   color: $purpleColor;
+  border: 2px solid #8D81AC;
 }
 
 @media (max-width: 992px) {
